2023-09-08T08:08:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6119304960 # 1896
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-08
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 719 1337 / 732 1356
* notice: next accum: outdated-unq outdated-all / unq all: 719 1337 / 733 1357
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-08]

2023-09-08T00:32:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6116188529 # 1895
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-08
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 719 1337 / 731 1355
* notice: next accum: outdated-unq outdated-all / unq all: 719 1337 / 732 1356
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-07]

2023-09-07T00:32:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6103886482 # 1892
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-07
* notice: last 14d: unq all: 3 18
* notice: prev accum: outdated-unq outdated-all / unq all: 719 1337 / 731 1354
* notice: next accum: outdated-unq outdated-all / unq all: 719 1337 / 731 1355
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-06]

2023-09-06T08:09:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6094437938 # 1890