@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-08T08:08:56Z",
+  "timestamp" : "2023-09-09T00:31:25Z",
   "count_outdated" : 1337,
   "uniques_outdated" : 719,
-  "count" : 1357,
+  "count" : 1358,
   "uniques" : 733,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2023-09-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
